--- a/templates/login.html
+++ b/templates/login.html
@@ -33,7 +33,7 @@
 
     <div class="container">
 
-      <form class="form-signin">
+      <form class="form-signin" method="post" action={{url}}>
         <h2 class="form-signin-heading">Please sign in</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="username" id="username" class="form-control" placeholder="Username" required autofocus>
