--- a/templates/login.html
+++ b/templates/login.html
@@ -36,9 +36,9 @@
       <form class="form-signin" method="post" action={{url}}>
         <h2 class="form-signin-heading">Please sign in</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="username" id="username" class="form-control" placeholder="Username" required autofocus>
+        <input type="username" name="username"  id="username" class="form-control" placeholder="Username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="password" class="form-control" placeholder="Password" required>
+        <input type="password" name="password" id="password" class="form-control" placeholder="Password" required>
         <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
