--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
-<html>
-<head>
-	<title>Demo</title>
-</head>
+{% extends "base.html" %}
+
+{% block title %} Demo {% endblock %}
+
+{% block page_content %}
+
 <body>
 <a href="{{urls['reg_url']}}">注册</a>
 <a href="{{urls['login_url']}}">登录</a>
@@ -10,4 +12,5 @@
 <a href="{{urls['rest_post_url']}}">商家提交</a>
 <a href="{{urls['dispatch_list_url']}}">配送人员抢单</a>
 </body>
-</html>
+
+{% endblock %}
