--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
     <title>Signin Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="signin.css" rel="stylesheet">
@@ -28,11 +28,14 @@
       <script src="//cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+  <style type="script/css">
+    div#aaa{text-align: center}
+  </style>
   </head>
 
   <body>
 
-    <div class="container">
+    <div class="col-md-6 col-md-offset-3" id="aaa">
 
       <form class="form-signin" method="post" action={{url}}>
         <h2 class="form-signin-heading">Please sign in</h2>
