--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{%block page_content%}
 <html>
 <head>
 	<title>Home</title>
@@ -6,3 +9,5 @@
 	<h1>This is home</h1>
 </body>
 </html>
+
+{%endblock%}
