--- a/templates/user_commit.html
+++ b/templates/user_commit.html
@@ -1,3 +1,7 @@
+{% extends "base.html" %}
+
+{%block page_content%}
+
 <html>
 <head>
 	<title>Info</title>
@@ -6,3 +10,5 @@
 	<h1>User commit</h1>
 </body>
 </html>
+
+{%endblock%}
