--- a/templates/info.html
+++ b/templates/info.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{%block page_content%}
+
 <html>
 <head>
 	<title>Info</title>
@@ -6,3 +9,4 @@
 	<h1>{{info}}</h1>
 </body>
 </html>
+{%endblock%}
