--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{%block page_content%}
 
 <!DOCTYPE html>
 <html lang="zh-CN">
@@ -55,3 +58,4 @@
   <!--  <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
   </body>
 </html>
+{%endblock%}
