--- a/templates/reg.html
+++ b/templates/reg.html
@@ -1,11 +1,13 @@
-<html>
-<head>
-	<title>注册</title>
-</head>
+{% extends "base.html" %}
+
+{% block title %} 注册 {% endblock %}
+
+{% block page_content%}
+
 <body>
 
 <h2>注册</h2>
-<h3>哈哈哈哈</h3>
+<h3>请在下面注册框内输入用户名和密码</h3>
 <div>
 	<form action="{{url}}" method="post">
 		<input type="text" name="username" value ="Username" />	
@@ -14,4 +16,4 @@
 	</form>
 </div>
 </body>
-</html>
+{% endblock%}
