add login status and elastic search

--- a/templates/user_commit.html
+++ b/templates/user_commit.html
@@ -4,5 +4,10 @@
 </head>
 <body>
 	<h1>User commit</h1>
+	<div>
+		{% for item in data %}
+        <li><a href="{{ item.href }}">{{ item["_source"]["address"] }}</a></li>
+    	{% endfor %}
+	</div>	
 </body>
 </html>
