--- a/templates/login.html
+++ b/templates/login.html
@@ -51,8 +51,10 @@
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" id = “submit” type="submit">Sign in</button>
+        <button class="btn btn-primary btn-block" id = “submit” type="submit">Sign in</button>
       </form>
+      <a href="reg">Register Now</a>
+
 
     </div> <!-- /container -->
 
