--- a/templates/rest_post.html
+++ b/templates/rest_post.html
@@ -4,6 +4,9 @@
 
 {% block content %}
 <body>
+	<div class="col-md-offset-5">
+	<h1 text-align=center>外卖配送单</h1>
+</div>
 	<form class="form-horizontal">
 	  <div class="form-group form-group-lg">
 	    <label class="col-md-2 control-label" for="disp_fee">配送费</label>
@@ -37,7 +40,9 @@
 	      <input class="form-control" type="text" id="target_adr" name="target_adr">
 	    </div>
 	  </div>
-
+		<div class="col-md-4 col-md-offset-4">
+		<button class="btn btn-lg btn-primary btn-block" id = “submit” type="submit">发出此单</button>
+	</div>
 	</form>
 
 </body>
