add seller, buyer and sender page

--- a/templates/logout.html
+++ b/templates/logout.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{%block page_content%}
 <html>
 <head>
 	<title>Log out</title>
@@ -6,3 +8,4 @@
 	<h1>log out ok</h1>
 </body>
 </html>
+{%endblock%}
