--- a/templates/rest_post.html
+++ b/templates/rest_post.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{%block page_content%}
+
 <html>
 <head>
 	<title>info</title>
@@ -6,3 +9,4 @@
 	<h1>商家提交请求页面</h1>
 </body>
 </html>
+{%endblock%}
