--- a/templates/base1.html
+++ b/templates/base1.html
@@ -16,6 +16,9 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">首页</a></li>
+                <li><a href="/seller">商家</a></li>
+                <li><a href="/buyer">用户</a></li>
+                <li><a href="/sender">配送</a></li>
             </ul>
         </div>
     </div>
