--- a/templates/dispatch_list.html
+++ b/templates/dispatch_list.html
@@ -4,5 +4,18 @@
 </head>
 <body>
 	<h1>配送人员抢单页面</h1>
+	{% for order in orders %}
+	<li>
+		<div>
+			订单号{{order['order_id']}} <br />
+			用户号{{order['user_id']}} <br />
+			配送费{{order['dispatch_price']}} <br />
+			地址{{order['address']}} <br />
+			电话{{order['phone']}} <br />
+			维度{{order['latitude']}} <br />
+			经度{{order['longitude']}} <br />
+		</div>
+	</li>
+	{% endfor %}
 </body>
 </html>
