--- a/templates/user_commit.html
+++ b/templates/user_commit.html
@@ -16,7 +16,9 @@
         	<div>价格:{{ item["_source"]["total_price"] }}</div>
         	<div>地址:{{ item["_source"]["address"] }}</div>
         	<div>下单时间 :{{ item["_source"]["created_at"] }}</div>
-        	<div class="btn btn-primary">下单</div>
+	        <a class="btn btn-primary" href="{{ url_for('receive_user_order', order_id=item['_source']['order_id'])}}">
+        		下单
+        	</a>
         </li>
         <br />
     	{% endfor %}
