--- a/templates/seller.html
+++ b/templates/seller.html
@@ -5,9 +5,13 @@
 <head>
 	<title>商家主页</title>
 </head>
+{%if kv['login'] != 1%}
+<meta http-equiv="refresh" content="1; url='/login'">
+{%else%}
 <body>
 	<h2>商家主页</h2>
    <h3><a href="/rest_post">提交订单</h3>
 </body>
+{%endif%}
 </html>
 {%endblock%}
