add user certification

--- a/templates/base1.html
+++ b/templates/base1.html
@@ -19,6 +19,7 @@
                 <li><a href="/seller">商家</a></li>
                 <li><a href="/buyer">用户</a></li>
                 <li><a href="/sender">配送</a></li>
+                <li><a href='/logout'>退出</a></li>
             </ul>
         </div>
     </div>
