--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">首页</a></li>
+                <li><a href='/logout'>退出</a></li>
             </ul>
         </div>
     </div>
