--- a/templates/rest_post.html
+++ b/templates/rest_post.html
@@ -6,44 +6,50 @@
 <body>
 	<div class="col-md-offset-5">
 	<h1 text-align=center>外卖配送单</h1>
-</div>
-	<form class="form-horizontal">
-	  <div class="form-group form-group-lg">
-	    <label class="col-md-2 control-label" for="disp_fee">配送费</label>
-	    <div class="col-md-10">
-	      <input class="form-control" type="text" id="disp_fee" placeholder="5" name="disp_fee">
-	    </div>
-	  </div>
-		<div class="form-group form-group-lg">
-	    <label class="col-md-2 control-label" for="ready_time">预计几分钟后完成菜品</label>
-	    <div class="col-md-10">
-	      <input class="form-control" type="text" id="ready_time" placeholder="5" name="ready_time">
-	    </div>
-	  </div>
-		<div class="form-group form-group-lg">
-	    <label class="col-md-2 control-label" for="ready_time">预计几分钟后送达</label>
-	    <div class="col-md-10">
-	      <input class="form-control" type="text" id="dlv_time" placeholder="30" name="dlv_time">
-	    </div>
-	  </div>
+	{% for order in orders %}
+		<br />
+		<div>
+		<form class="form-horizontal">
+			订单号:{{order['order_id']}}
+		  <div class="form-group form-group-lg">
+		    <label class="col-md-2 control-label" for="disp_fee">配送费</label>
+		    <div class="col-md-10">
+		      <input class="form-control" type="text" id="disp_fee" placeholder="5" name="disp_fee" value="{{order['send_price']}}">
+		    </div>
+		  </div>
+			<div class="form-group form-group-lg">
+		    <label class="col-md-2 control-label" for="ready_time">预计几分钟后完成菜品</label>
+		    <div class="col-md-10">
+		      <input class="form-control" type="text" id="ready_time" placeholder="5" name="ready_time">
+		    </div>
+		  </div>
+			<div class="form-group form-group-lg">
+		    <label class="col-md-2 control-label" for="ready_time">预计几分钟后送达</label>
+		    <div class="col-md-10">
+		      <input class="form-control" type="text" id="dlv_time" placeholder="30" name="dlv_time">
+		    </div>
+		  </div>
 
-		<div class="form-group form-group-lg">
-	    <label class="col-md-2 control-label" for="shop_adr">商家地址</label>
-	    <div class="col-md-10">
-	      <input class="form-control" type="text" id="shop_adr" name="shop_adr">
-	    </div>
+			<div class="form-group form-group-lg">
+		    <label class="col-md-2 control-label" for="shop_adr">商家地址</label>
+		    <div class="col-md-10">
+		      <input class="form-control" type="text" id="shop_adr" name="shop_adr" value="{{order['seller_address']}}">
+		    </div>
 
-	  </div>
-		<div class="form-group form-group-lg">
-	    <label class="col-md-2 control-label" for="target_adr">目的地址</label>
-	    <div class="col-md-10">
-	      <input class="form-control" type="text" id="target_adr" name="target_adr">
-	    </div>
-	  </div>
-		<div class="col-md-4 col-md-offset-4">
-		<button class="btn btn-lg btn-primary btn-block" id = “submit” type="submit">发出此单</button>
-	</div>
-	</form>
+		  </div>
+			<div class="form-group form-group-lg">
+		    <label class="col-md-2 control-label" for="target_adr">目的地址</label>
+		    <div class="col-md-10">
+		      <input class="form-control" type="text" id="target_adr" name="target_adr" value="{{order['address']}}">
+		    </div>
+		  </div>
+			<div class="col-md-4 col-md-offset-4">
+			<button class="btn btn-lg btn-primary btn-block" id = “submit” type="submit">发出此单</button>
+		</form>
+		</div>
+		<br />
+	{% endfor %}
+
 	
 
 </body>
