add rest post api

--- a/templates/dispatch_list.html
+++ b/templates/dispatch_list.html
@@ -15,7 +15,10 @@
 			订单号{{order['order_id']}} <br />
 			用户号{{order['user_id']}} <br />
 			配送费{{order['dispatch_price']}} <br />
-			地址{{order['address']}} <br />
+			商家完成时间{{order['ready_time']}} <br />
+			商家地址{{order['rest_address']}} <br />
+			客户地址{{order['address']}} <br />
+			最晚送达时间{{order['deliver_time']}} <br />
 			电话{{order['phone']}} <br />
 			维度{{order['latitude']}} <br />
 			经度{{order['longitude']}} <br />
