--- a/templates/rest_post.html
+++ b/templates/rest_post.html
@@ -9,7 +9,7 @@
 	{% for order in orders %}
 		<br />
 		<div>
-		<form class="form-horizontal">
+		<form class="form-horizontal" method="post" action="{{url_for('receive_rest_order', order_id=order['order_id'])}}">
 			订单号:{{order['order_id']}}
 		  <div class="form-group form-group-lg">
 		    <label class="col-md-2 control-label" for="disp_fee">配送费</label>
