--- a/templates/home.html
+++ b/templates/home.html
@@ -4,9 +4,11 @@
 <html>
 <head>
 	<title>Home</title>
+
 </head>
 <body>
 	<h1>This is home</h1>
+   <meta http-equiv="refresh" content="0.5; url='/'">
 </body>
 </html>
 
