--- a/templates/dispatch_list.html
+++ b/templates/dispatch_list.html
@@ -19,7 +19,7 @@
 			{% for order in orders %}
 
 				<script>
-		if ({{order['latitude']}} > 10)
+//		if ({{order['latitude']}} > 5)
 {
 document.write("<div>")
 document.write("<li>")
