--- a/templates/dispatch_list.html
+++ b/templates/dispatch_list.html
@@ -16,7 +16,7 @@
 			{% for order in orders %}
 
 				<script>
-		if ({{order['latitude']}} < 5)
+		if ({{order['latitude']}} > 5)
 {
 document.write("<div>")
 document.write("<li>")
