--- a/templates/reg.html
+++ b/templates/reg.html
@@ -14,6 +14,7 @@
 			<input type="username" name="username"  id="username" class="form-control" placeholder="Username" required autofocus>
 			<label for="inputPassword" class="sr-only">Password</label>
 			<input type="password" name="password" id="password" class="form-control" placeholder="Password" required>
+			<input type="text" name="type" id="tyep" class="form-control" placeholder="0" required value="0">
 			<div class="checkbox">
 			</div>
 			<button class="btn btn-primary btn-block" id = “submit” type="submit">Submit</button>
