--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,15 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">首页</a></li>
-                <li><a href='/logout'>退出</a></li>
+                {%if kv%}
+                    {%if kv['login'] == 1%}
+                    <li><a href='/logout'>退出</a></li>
+                    {%else%}
+                    <li><a href='/login'>登陆/注册</a></li>
+                    {%endif%}
+                {%else%}
+                <li><a href='/login'>登陆/注册</a></li>
+                {%endif%}
             </ul>
         </div>
     </div>
