--- a/templates/base1.html
+++ b/templates/base1.html
@@ -16,10 +16,19 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">首页</a></li>
-                <li><a href="/seller">商家</a></li>
+                <li><a href="/rest_post">商家</a></li>
                 <li><a href="/buyer">用户</a></li>
                 <li><a href="/sender">配送</a></li>
-                <li><a href='/logout'>退出</a></li>
+                {%if kv%}
+                    {%if kv['login'] == 1%}
+                    <li><a href='/logout'>退出</a></li>
+                    {%else%}
+                    <li><a href='/login'>登陆/注册</a></li>
+                    {%endif%}
+                {%else%}
+                <li><a href='/login'>登陆/注册</a></li>
+                {%endif%}
+
             </ul>
         </div>
     </div>
