--- a/templates/user_order.html
+++ b/templates/user_order.html
@@ -7,18 +7,16 @@
    <h1>用户订单状态</h1>
    <p>当前时间：{{ moment(current_time).format('LLL') }}</p>
    <div>
-      {% for item in data %}
-        <li>
-         <div>订单号:{{ item["_source"]["order_id"] }}</div>
-         <div>商家:{{ item["_source"]["restaurant_id"] }}</div>
-         <div>价格:{{ item["_source"]["total_price"] }}</div>
-         <div>地址:{{ item["_source"]["address"] }}</div>
-         <div>下单时间 :{{ item["_source"]["created_at"] }}</div>
-           <a class="btn btn-primary" href="{{ url_for('receive_user_order', order_id=item['_source']['order_id'])}}">
-            追踪
-         </a>
-        </li>
+      {% for order in orders %}
+        <div>
+        ID:{{ order['order_id']}} <br />
+        创建时间{{ order['created_at']}} <br />
+        价格{{ order['total_price']}} <br />
+        餐厅名称{{ order['restaurant_name']}} <br />
+        状态:{{ order['status']}} <br />
+        <a class="btn btn-primary" href="{{ url_for('order_detail', order_id=order['order_id'])}}">详细</a>
         <br />
+      </div>
       {% endfor %}
    </div>
 
