--- a/templates/base.html
+++ b/templates/base.html
@@ -18,12 +18,12 @@
                 <li><a href="/">首页</a></li>
                 {%if kv%}
                     {%if kv['login'] == 1%}
-                    <li><a href='/logout'>退出</a></li>
+                    <li class="pull-right"><a href='/logout'>退出</a></li>
                     {%else%}
-                    <li><a href='/login'>登陆/注册</a></li>
+                    <li class="pull-right"><a href='/login'>登陆/注册</a></li>
                     {%endif%}
                 {%else%}
-                <li><a href='/login'>登陆/注册</a></li>
+                <li class="pull-right"><a href='/login'>登陆/注册</a></li>
                 {%endif%}
             </ul>
         </div>
