--- a/templates/dispatch_list.html
+++ b/templates/dispatch_list.html
@@ -64,9 +64,68 @@ var point = new BMap.Point(121, 31);  // 创建点坐标
 map.centerAndZoom(point, 15);                 // 初始化地图，设置中心点坐标和地图级别
 */
 </script>
+</div>
 
-		</div>
-		<div class="col-md-4">
+<div class="col-md-4">
+<h2 class="text-success">最新外卖配送单列表</h2>
+{% for order in orders %}
+{%if order['latitude'] > 5%}
+<div class="bs-example">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>订单信息</th>
+                <th>信息</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>订单号</td>
+                <td>{{order['order_id']}}</td>
+            </tr>
+
+             <tr>
+                <td>商家地址</td>
+                <td>{{order['rest_address']}}</td>
+            </tr>
+
+             <tr>
+                <td>商家完成时间</td>
+                <td>{{order['ready_time']}}</td>
+            </tr>
+
+             <tr>
+                <td>客户地址</td>
+                <td>{{order['address']}}</td>
+            </tr>
+
+             <tr>
+                <td>客户电话</td>
+                <td>{{order['phone']}}</td>
+            </tr>
+
+             <tr>
+                <td>最晚送达时间</td>
+                <td>{{order['deliver_time']}}</td>
+            </tr>
+
+            <tr>
+                <td>配送费</td>
+                <td>{{order['dispatch_price']}}</td>
+            </tr>
+
+        </tbody>
+    </table>
+</div>
+<a href="{{url_for('sender_post', order_id=order['order_id'])}}" class="btn btn-primary">抢单</a>
+
+{%endif%}
+{%endfor%}
+</div>
+
+
+	<!--	<div class="col-md-4">
 			<h2>最新外卖配送单列表</h2>
 			{% for order in orders %}
 
@@ -91,10 +150,14 @@ document.write("</div>")
 
 }
 		</script>
+
 	<a href="{{url_for('sender_post', order_id=order['order_id'])}}" class="btn btn-primary">抢单</a>
 		{%endfor%}
 		</div>
 	</div>
+	-->
+
+
 </body>
 </html>
 {%endblock%}
