--- a/templates/sender.html
+++ b/templates/sender.html
@@ -9,14 +9,17 @@
 <meta http-equiv="refresh" content="1; url='/login'">
 {%else%}
 <body>
-	<h2>配送主页</h2>
-   <h3><a href="/dispatch_list">抢单</a></h3>
+	<h1>配送主页</h1>
+   <!--<h3><a href="/dispatch_list">抢单</a></h3>-->
 
+   <a class="btn btn-danger btn-lg btn-block " href="/dispatch_list">抢单</a>
+  
+
+  <!-- <h3 class="text-warning">配送中订单</h3>
    <div>
-  		已完成订单
   		{% for order in orders %}
 				<script>
-		if ({{order['done']}} =="1")
+		if ({{order['done']}} =="0")
 {
 document.write("<div>")
 document.write("<li>")
@@ -33,7 +36,7 @@ document.write("经度{{order['longitude']}} <br />")
 document.write("<a")
 document.write("</li>")
 document.write("</div>")
-document.write("<a href='{{url_for('sender_post', order_id=order['order_id'])}}' class='btn btn-primary'>抢单</a>")
+document.write("<a href='{{url_for('arrival', order_id=order['order_id'])}}' class='btn btn-primary'>送达</a>")
 }
 		</script>
 		{%endfor%}
@@ -41,11 +44,72 @@ document.write("<a href='{{url_for('sender_post', order_id=order['order_id'])}}'
 		<br />
    </div>
 
+-->
 
+
+<h2 class="text-success">配送中订单</h2>
+{% for order in orders %}
+{% if order['done'] == 0 %}
+<div class="bs-example">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>订单信息</th>
+                <th>信息</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>订单号</td>
+                <td>{{order['order_id']}}</td>
+            </tr>
+
+             <tr>
+                <td>商家地址</td>
+                <td>{{order['rest_address']}}</td>
+            </tr>
+
+             <tr>
+                <td>商家完成时间</td>
+                <td>{{order['ready_time']}}</td>
+            </tr>
+
+             <tr>
+                <td>客户地址</td>
+                <td>{{order['address']}}</td>
+            </tr>
+
+             <tr>
+                <td>客户电话</td>
+                <td>{{order['phone']}}</td>
+            </tr>
+
+             <tr>
+                <td>最晚送达时间</td>
+                <td>{{order['deliver_time']}}</td>
+            </tr>
+
+            <tr>
+                <td>配送费</td>
+                <td>{{order['dispatch_price']}}</td>
+            </tr>
+
+        </tbody>
+    </table>
+</div>
+<a href='{{url_for('arrival', order_id=order['order_id'])}}' class='btn btn-primary'>送达</a>
+
+{%endif%}
+{%endfor%}
+
+
+
+ <!--   <h3 class="text-success">已完成订单</h3>
    <div>
-  		未完成订单
+  		
   		{% for order in orders %}
-  		{% if order['done'] == 0 %}
+  		{% if order['done'] == 1 %}
   		<li>
 			订单号{{order['order_id']}} <br />
 			用户号{{order['user_id']}} <br />
@@ -57,52 +121,70 @@ document.write("<a href='{{url_for('sender_post', order_id=order['order_id'])}}'
 			电话{{order['phone']}} <br />
 			维度{{order['latitude']}} <br />
 			经度{{order['longitude']}} <br />
-			<a href="{{url_for('arrival', order_id=order['order_id'])}}" class='btn btn-primary'>送达</a>
+			<a class='btn btn-warning'>已送达</a>
 			<br />
   		</li>
 		{%endif%}
 		{%endfor%}
-   </div>
+   </div> -->
 
-   <!--<h3><a href="/dispatch_list">抢单</a></h3> -->
-   <a class="btn btn-danger" href="/dispatch_list">抢单</a>
-   <h3 class="text-warning">配送中订单</h3>
-   {%if data%}
-   <div>
-      {% for item in data %}
-        <li>
-         <div>订单号:{{ item["_source"]["order_id"] }}</div>
-         <div>商家:{{ item["_source"]["restaurant_id"] }}</div>
-         <div>价格:{{ item["_source"]["total_price"] }}</div>
-         <div>地址:{{ item["_source"]["address"] }}</div>
-         <div>下单时间 :{{ item["_source"]["created_at"] }}</div>
-           <a class="btn btn-primary" href="{{ url_for('receive_user_order', order_id=item['_source']['order_id'])}}">
-            送达
-         </a>
-        </li>
-        <br />
-      {% endfor %}
-   </div>   
-   {%endif%}
 
-   <h3 class="text-success">已完成订单</h3>
-   {%if data%}
-   <div>
-      {% for item in data %}
-        <li>
-         <div>订单号:{{ item["_source"]["order_id"] }}</div>
-         <div>商家:{{ item["_source"]["restaurant_id"] }}</div>
-         <div>价格:{{ item["_source"]["total_price"] }}</div>
-         <div>地址:{{ item["_source"]["address"] }}</div>
-         <div>下单时间 :{{ item["_source"]["created_at"] }}</div>
-         <button type="button" class="btn btn-lg btn-primary" disabled="disabled">已送达</button>
-           
-         </a>
-        </li>
-        <br />
-      {% endfor %}
-   </div>   
-   {%endif%}
+
+<h2 class="text-success">已完成订单</h2>
+{% for order in orders %}
+{% if order['done'] == 1 %}
+<div class="bs-example">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>订单信息</th>
+                <th>信息</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>订单号</td>
+                <td>{{order['order_id']}}</td>
+            </tr>
+
+             <tr>
+                <td>商家地址</td>
+                <td>{{order['rest_address']}}</td>
+            </tr>
+
+             <tr>
+                <td>商家完成时间</td>
+                <td>{{order['ready_time']}}</td>
+            </tr>
+
+             <tr>
+                <td>客户地址</td>
+                <td>{{order['address']}}</td>
+            </tr>
+
+             <tr>
+                <td>客户电话</td>
+                <td>{{order['phone']}}</td>
+            </tr>
+
+             <tr>
+                <td>最晚送达时间</td>
+                <td>{{order['deliver_time']}}</td>
+            </tr>
+
+            <tr>
+                <td>配送费</td>
+                <td>{{order['dispatch_price']}}</td>
+            </tr>
+
+        </tbody>
+    </table>
+</div>
+
+{%endif%}
+{%endfor%}
+
 
 </body>
 {%endif%}
