--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,20 @@
                 <li><a href="/">首页</a></li>
                 {%if kv%}
                     {%if kv['login'] == 1%}
-                    <li class="pull-right"><a href='/logout'>退出</a></li>
+                    {%if kv['type'] == 0%}
+                    <li><a href='/buyer'>买家主页</a></li>
+                    {%endif%}
+
+                    {%if kv['type'] == 1%}
+                    <li><a href='/seller'>卖家主页</a></li>
+                    {%endif%}
+
+                    {%if kv['type'] == 2%}
+                    <li><a href='/sender'>配送主页</a></li>
+                    {%endif%}
+                    <li><a href='/logout'>退出</a></li>
                     {%else%}
-                    <li class="pull-right"><a href='/login'>登陆/注册</a></li>
+                    <li><a href='/login'>登陆/注册</a></li>
                     {%endif%}
                 {%else%}
                 <li class="pull-right"><a href='/login'>登陆/注册</a></li>
