--- a/templates/info.html
+++ b/templates/info.html
@@ -6,7 +6,7 @@
 	<title>Info</title>
 </head>
 <body>
-	<h1>{{info}}</h1>
+	<h1 class = >{{info}}</h1>
    {%if url%}
    <meta http-equiv="refresh" content="1; url={{url}}">
    {%endif%}
