--- a/templates/base1.html
+++ b/templates/base1.html
@@ -16,11 +16,21 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">首页</a></li>
-                <li><a href="/rest_post">商家</a></li>
-                <li><a href="/buyer">用户</a></li>
-                <li><a href="/sender">配送</a></li>
                 {%if kv%}
                     {%if kv['login'] == 1%}
+
+                    {%if kv['type'] == 0%}
+                    <li><a href='/buyer'>买家主页</a></li>
+                    {%endif%}
+
+                    {%if kv['type'] == 1%}
+                    <li><a href='/seller'>卖家主页</a></li>
+                    {%endif%}
+
+                    {%if kv['type'] == 2%}
+                    <li><a href='/sender'>配送主页</a></li>
+                    {%endif%}
+
                     <li class="pull-right"><a href='/logout'>退出</a></li>
                     {%else%}
                     <li class="pull-right"><a href='/login'>登陆/注册</a></li>
@@ -69,7 +79,7 @@
         <span class="control right">›</span>
  
     </div>
-    
+
 
 
 {% endblock %}
