--- a/templates/dispatch_list.html
+++ b/templates/dispatch_list.html
@@ -17,183 +17,131 @@
 </script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
-	<div class="row" id="map">
-		<div class="col-md-8" id="container">
+<div class="row" id="map">
+	<div class="col-md-8" id="container">
 			<h2>地图</h2>
-<script type="text/javascript">
-
-var location_x = 121.380901337+Math.random()*0.000001//初始经度
-var location_y = 31.2458896637+Math.random()*0.000001//初始纬度
-var tmp = 1;
-
-function post(URL, PARAMS) {
-    var temp = document.createElement("form");
-    temp.action = URL;
-    temp.method = "post";
-    temp.style.display = "none";
-    for (var x in PARAMS) {
-        var opt = document.createElement("textarea");
-        opt.name = x;
-        opt.value = PARAMS[x];
-        // alert(opt.name)
-        temp.appendChild(opt);
-    }
-    document.body.appendChild(temp);
-    temp.submit();
-    return temp;
-}
-
-function initMap(){
-createMap();//创建地图
-setMapEvent();//设置地图事件
-addMapControl();//向地图添加控件
-}
-
-//创建地图函数：
-function createMap(){
-var map = new BMap.Map("container");//在百度地图容器中创建一个地图
-var point = new BMap.Point(location_x,location_y);//定义一个中心点坐标
-map.centerAndZoom(point,20);//设定地图的中心点和坐标并将地图显示在地图容器中
-window.map = map;//将map变量存储在全局
-var marker = new BMap.Marker(point);  // 创建标注
-map.addOverlay(marker);
-//marker.setAnimation(BMAP_ANIMATION_BOUNCE);
-}
-
-function updateLocation(){
-window.map.clearOverlays();
-tmp = tmp + 1
-var sign = 1
-if (Math.random()>0.2){
-		sign = -1
-}
-else {
-		sign = 1
-}
-location_x = location_x + Math.random()*0.00001*sign
-location_y = location_y + Math.random()*0.00001*sign
-//document.getElementById("list").value = location_x
-var new_point = new BMap.Point(location_x,location_y);
-//window.map.centerAndZoom(new_point,17);
-var marker = new BMap.Marker(new_point);
-window.map.addOverlay(marker);              // 将标注添加到地图中
-window.map.panTo(new_point);
-// post("/sender_api",{id:kv['uid'],longtitude:location_x.toString(),latitude:location_y.toString()})
-//new_marker.setAnimation(BMAP_ANIMATION_BOUNCE);
-//window.map.panTo(new_point);
-
-data={};
-data['uid']={{kv['uid']}};
-data['longitude']=location_x;
-data['latitude']=location_y;
-$.ajax({
-        type : "POST",
-        url : "/sender_api",
-        data: JSON.stringify(data),
-        contentType: 'application/json;charset=UTF-8',
-        success: function(result) {
-            console.log(result);
-        }
-    });
-console.log("run update")
-/*
-$.post( "/sender_api", {uid:{{kv['uid']}},longtitude:location_x.toString(),latitude:location_y.toString()},function( data ) {
-				console.log(data);
-			});
-
-*/
-}
-
-
-//地图事件设置函数：
-function setMapEvent(){
-map.enableDragging();//启用地图拖拽事件，默认启用(可不写)
-map.enableScrollWheelZoom();//启用地图滚轮放大缩小
-map.enableDoubleClickZoom();//启用鼠标双击放大，默认启用(可不写)
-map.enableKeyboard();//启用键盘上下左右键移动地图
-}
-
-//地图控件添加函数：
-function addMapControl(){
-//向地图中添加缩放控件
-var ctrl_nav = new BMap.NavigationControl({anchor:BMAP_ANCHOR_TOP_LEFT,type:BMAP_NAVIGATION_CONTROL_LARGE});
-map.addControl(ctrl_nav);
-//向地图中添加缩略图控件
-var ctrl_ove = new BMap.OverviewMapControl({anchor:BMAP_ANCHOR_BOTTOM_RIGHT,isOpen:1});
-map.addControl(ctrl_ove);
-//向地图中添加比例尺控件
-var ctrl_sca = new BMap.ScaleControl({anchor:BMAP_ANCHOR_BOTTOM_LEFT});
-map.addControl(ctrl_sca);
-}
-initMap();//创建和初始化地图
-window.setInterval("updateLocation();",1000)
-/*var map = new BMap.Map("container");          // 创建地图实例
-var point = new BMap.Point(121, 31);  // 创建点坐标
-map.centerAndZoom(point, 15);                 // 初始化地图，设置中心点坐标和地图级别
-*/
-
-
-
-</script>
+	</div>
+	<div class="col-md-4" >
+			<h2>订单</h2>
+			<div id="ordertable"></div>
+	</div>
 </div>
 
-<div class="col-md-4">
-<h2 class="text-success">最新外卖配送单列表</h2>
-{% for order in orders %}
-{%if order['latitude'] > 5%}
-<div class="bs-example">
-    <table class="table">
-        <thead>
-            <tr>
-                <th>订单信息</th>
-                <th>信息</th>
-            </tr>
-        </thead>
 
-        <tbody>
-            <tr>
-                <td>订单号</td>
-                <td>{{order['order_id']}}</td>
-            </tr>
+	<script type="text/javascript">
 
-             <tr>
-                <td>商家地址</td>
-                <td>{{order['rest_address']}}</td>
-            </tr>
+	var location_x = 121.380901337+Math.random()*0.000001//初始经度
+	var location_y = 31.2458896637+Math.random()*0.000001//初始纬度
+	var tmp = 1;
 
-             <tr>
-                <td>商家完成时间</td>
-                <td>{{order['ready_time']}}</td>
-            </tr>
 
-             <tr>
-                <td>客户地址</td>
-                <td>{{order['address']}}</td>
-            </tr>
+	function initMap(){
+	createMap();//创建地图
+	setMapEvent();//设置地图事件
+	addMapControl();//向地图添加控件
+	}
 
-             <tr>
-                <td>客户电话</td>
-                <td>{{order['phone']}}</td>
-            </tr>
+	//创建地图函数：
+	function createMap(){
+	var map = new BMap.Map("container");//在百度地图容器中创建一个地图
+	var point = new BMap.Point(location_x,location_y);//定义一个中心点坐标
+	map.centerAndZoom(point,20);//设定地图的中心点和坐标并将地图显示在地图容器中
+	window.map = map;//将map变量存储在全局
+	var marker = new BMap.Marker(point);  // 创建标注
+	map.addOverlay(marker);
+	}
 
-             <tr>
-                <td>最晚送达时间</td>
-                <td>{{order['deliver_time']}}</td>
-            </tr>
+	function updateLocation(){
+	window.map.clearOverlays();
+	tmp = tmp + 1
+	var sign = 1
+	if (Math.random()>0.2){
+			sign = -1
+	}
+	else {
+			sign = 1
+	}
+	location_x = location_x + Math.random()*0.00001*sign
+	location_y = location_y + Math.random()*0.00001*sign
+	var new_point = new BMap.Point(location_x,location_y);
+	var marker = new BMap.Marker(new_point);
+	window.map.addOverlay(marker);              // 将标注添加到地图中
+	window.map.panTo(new_point);
+	ot = document.getElementById('ordertable')
+	data={};
+	data['uid']={{kv['uid']}};
+	data['longitude']=location_x;
+	data['latitude']=location_y;
+	$.ajax({
+	        type : "POST",
+	        url : "/sender_api",
+	        data: JSON.stringify(data),
+	        contentType: 'application/json;charset=UTF-8',
+	        success: function(result) {
+	            console.log(result);
+							var orders = eval(result)
+							//.value = orders[0]["phone"]
 
-            <tr>
-                <td>配送费</td>
-                <td>{{order['dispatch_price']}}</td>
-            </tr>
+							table = ''
+							for (order in orders)
+							{
+								console.log("order");
+								console.log(orders[parseInt(order)]);
+								orderid = orders[parseInt(order)]['order_id']
+								table += '<table class='+'table><thead><tr><th>订单信息</th>'+
+								'<th>信息</th></tr></thead><tbody><tr><td>订单号</td><td>'+orders[parseInt(order)]["order_id"]+'</td>'+
+	            '</tr><tr><td>商家地址</td><td>'+orders[parseInt(order)]["rest_address"]+'</td></tr><tr><td>商家完成时间</td>'+
+							'<td>'+orders[parseInt(order)]["ready_time"]+'</td></tr><tr><td>客户地址</td><td>'+orders[parseInt(order)]["address"]+'</td>'+
+	            '</tr><tr><td>客户电话</td><td>'+orders[parseInt(order)]["phone"]+'</td></tr><tr><td>最晚送达时间</td>'+
+							'<td>'+orders[parseInt(order)]["deliver_time"]+'</td></tr><tr><td>配送费</td><td>'+orders[parseInt(order)]["dispatch_price"]+'</td>'+
+							'</tr></tbody></table>'
+						}
 
-        </tbody>
-    </table>
-</div>
-<a href="{{url_for('sender_post', order_id=order['order_id'])}}" class="btn btn-primary">抢单</a>
+						console.log(table);
 
-{%endif%}
-{%endfor%}
-</div>
-</body>
-</html>
-{%endblock%}
+						ot.innerHTML = table
+	        }
+	    });
+	console.log("run update")
+
+	//	console.log(order);
+
+	/*
+	$.post( "/sender_api", {uid:{{kv['uid']}},longtitude:location_x.toString(),latitude:location_y.toString()},function( data ) {
+					console.log(data);
+				});
+
+	*/
+	}
+
+
+	//地图事件设置函数：
+	function setMapEvent(){
+	map.enableDragging();//启用地图拖拽事件，默认启用(可不写)
+	map.enableScrollWheelZoom();//启用地图滚轮放大缩小
+	map.enableDoubleClickZoom();//启用鼠标双击放大，默认启用(可不写)
+	map.enableKeyboard();//启用键盘上下左右键移动地图
+	}
+
+	//地图控件添加函数：
+	function addMapControl(){
+	//向地图中添加缩放控件
+	var ctrl_nav = new BMap.NavigationControl({anchor:BMAP_ANCHOR_TOP_LEFT,type:BMAP_NAVIGATION_CONTROL_LARGE});
+	map.addControl(ctrl_nav);
+	//向地图中添加缩略图控件
+	var ctrl_ove = new BMap.OverviewMapControl({anchor:BMAP_ANCHOR_BOTTOM_RIGHT,isOpen:1});
+	map.addControl(ctrl_ove);
+	//向地图中添加比例尺控件
+	var ctrl_sca = new BMap.ScaleControl({anchor:BMAP_ANCHOR_BOTTOM_LEFT});
+	map.addControl(ctrl_sca);
+	}
+	initMap();//创建和初始化地图
+	window.setInterval("updateLocation();",1000)
+	/*var map = new BMap.Map("container");          // 创建地图实例
+	var point = new BMap.Point(121, 31);  // 创建点坐标
+	map.centerAndZoom(point, 15);                 // 初始化地图，设置中心点坐标和地图级别
+	*/
+	</script>
+
+
+{% endblock %}
