--- a/templates/dispatch_list.html
+++ b/templates/dispatch_list.html
@@ -78,14 +78,14 @@
 	        data: JSON.stringify(data),
 	        contentType: 'application/json;charset=UTF-8',
 	        success: function(result) {
-	            console.log(result);
+	            // console.log(result);
 							var orders = eval(result)
 							//.value = orders[0]["phone"]
 
 							table = ''
 							for (order in orders)
 							{
-								console.log("order");
+								console.log(order);
 								console.log(orders[parseInt(order)]);
 								orderid = orders[parseInt(order)]['order_id']
 								table += '<table class='+'table><thead><tr><th>订单信息</th>'+
@@ -95,9 +95,10 @@
 	            '</tr><tr><td>客户电话</td><td>'+orders[parseInt(order)]["phone"]+'</td></tr><tr><td>最晚送达时间</td>'+
 							'<td>'+orders[parseInt(order)]["deliver_time"]+'</td></tr><tr><td>配送费</td><td>'+orders[parseInt(order)]["dispatch_price"]+'</td>'+
 							'</tr></tbody></table>'
+                           + "<a class='btn btn-primary' href='/sender_post/"+orderid+"'>下单</a>"
 						}
 
-						console.log(table);
+						// console.log(table);
 
 						ot.innerHTML = table
 	        }
