--- a/templates/order_detail.html
+++ b/templates/order_detail.html
@@ -121,6 +121,8 @@
 	</script>
 
 	<div class="bs-example">
+	<div id="status" style="hidden;" >{{order['status']}}</div>
+	<div id="sender_uid" style="hidden;" >{{order['sender_uid']}}</div>
     <table class="table">
         <thead>
             <tr>
