--- a/templates/base1.html
+++ b/templates/base1.html
@@ -20,11 +20,11 @@
                     {%if kv['login'] == 1%}
 
                     {%if kv['type'] == 0%}
-                    <li><a href='/buyer'>买家主页</a></li>
+                    <li><a href='/buyer'>客户主页</a></li>
                     {%endif%}
 
                     {%if kv['type'] == 1%}
-                    <li><a href='/seller'>卖家主页</a></li>
+                    <li><a href='/seller'>商户主页</a></li>
                     {%endif%}
 
                     {%if kv['type'] == 2%}
