--- a/templates/buyer.html
+++ b/templates/buyer.html
@@ -4,6 +4,11 @@
 <html>
 <head>
 	<title>用户主页</title>
+  <style type="text/css">
+    div.done{
+      color: rgba(150, 160, 160, 0.9);
+    }
+  </style>
 </head>
 {%if kv['login'] != 1%}
 <meta http-equiv="refresh" content="1; url='/login'">
@@ -11,7 +16,7 @@
 <body>
 	<h1 class="text-primary">用户订单信息</h1>
 {%if orders|length == 0%}
-   <h2 class="text-warning">当前用户没有任何订单信息</h2>
+   <h2 class="text-warning">当前用户没有任何订单信息TAT</h2>
    {%else%}
    <h2 class="text-success">用户订单查询</h2>
    <p>当前时间：{{ moment(current_time).format('LLL') }}</p>
@@ -19,6 +24,7 @@
 
    <div>
 {% for order in orders %}
+{%if order['status'] != 'done'%}
 <div class="bs-example">
     <table class="table">
         <thead>
@@ -69,9 +75,64 @@
 </div>
 <br /><br /><br />
 
+{%endif%}
 {%endfor%}
 
 
+{% for order in orders %}
+{%if order['status'] == 'done'%}
+<div class="bs-example done">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>订单信息</th>
+                <th>信息</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>订单号</td>
+                <td>{{order['order_id']}}</td>
+            </tr>
+
+             <tr>
+                <td>创建时间</td>
+                <td>{{ order['created_at']}}</td>
+            </tr>
+
+             <tr>
+                <td>价格</td>
+                <td>{{ order['total_price']}}</td>
+            </tr>
+
+             <tr>
+                <td>餐厅名称</td>
+                <td>{{ order['restaurant_name']}}</td>
+            </tr>
+
+             <tr>
+                <td>订单状态</td>
+                {%if order['status'] == 'making'%}
+               <td>美食制作中</td>
+               {%endif%}
+               {%if order['status'] == 'on_the_way'%}
+               <td>配送中</td>
+               {%endif%}
+               {%if order['status'] == 'done'%}
+               <td>已完成</td>
+               {%endif%}
+            </tr>
+
+        </tbody>
+    </table>
+    <a class="btn btn-success" href="{{ url_for('order_detail', order_id=order['order_id'])}}">详细</a>
+    
+</div>
+<br /><br /><br />
+
+{%endif%}
+{%endfor%}
 
 
 {%endif%}
