--- a/templates/rest_post.html
+++ b/templates/rest_post.html
@@ -4,16 +4,16 @@
 
 {% block content %}
 <body>
-	<div class="col-md-offset-5">
+	<div class="col-md-offset-2 col-md-8">
 	<h1 text-align=center>外卖配送单</h1>
 	{%if orders|length == 0%}
-	<h2 class="text-warning">当前没有任何订单</h2>
+	<h2 class="text-warning">当前没有任何订单 TAT</h2>
 	{%else%}
 	{% for order in orders %}
-		<br />
-		<div>
 		<form class="form-horizontal" method="post" action="{{url_for('receive_rest_order', order_id=order['order_id'])}}">
-			订单号:{{order['order_id']}}
+			<div>
+				订单号:{{order['order_id']}}
+			</div>
 		  <div class="form-group form-group-lg">
 		    <label class="col-md-2 control-label" for="disp_fee">配送费</label>
 		    <div class="col-md-10">
@@ -21,35 +21,37 @@
 		    </div>
 		  </div>
 			<div class="form-group form-group-lg">
-		    <label class="col-md-2 control-label" for="ready_time">预计几分钟后完成菜品</label>
-		    <div class="col-md-10">
-		      <input class="form-control" type="text" id="ready_time" placeholder="5" name="ready_time">
-		    </div>
-		  </div>
+			    <label class="col-md-2 control-label" for="ready_time">预计几分钟后完成菜品</label>
+			    <div class="col-md-10">
+			      <input class="form-control" type="text" id="ready_time" placeholder="5" name="ready_time">
+			    </div>
+		 	 </div>
 			<div class="form-group form-group-lg">
-		    <label class="col-md-2 control-label" for="ready_time">预计几分钟后送达</label>
-		    <div class="col-md-10">
-		      <input class="form-control" type="text" id="dlv_time" placeholder="30" name="dlv_time">
-		    </div>
-		  </div>
+			    <label class="col-md-2 control-label" for="ready_time">预计几分钟后送达</label>
+			    <div class="col-md-10">
+			      <input class="form-control" type="text" id="dlv_time" placeholder="30" name="dlv_time">
+			    </div>
+			  </div>
 
-			<div class="form-group form-group-lg">
+		<div class="form-group form-group-lg">
 		    <label class="col-md-2 control-label" for="shop_adr">商家地址</label>
 		    <div class="col-md-10">
 		      <input class="form-control" type="text" id="shop_adr" name="shop_adr" value="{{order['seller_address']}}">
 		    </div>
+		  </div>
 
-		  </div>
-			<div class="form-group form-group-lg">
-		    <label class="col-md-2 control-label" for="target_adr">目的地址</label>
-		    <div class="col-md-10">
-		      <input class="form-control" type="text" id="target_adr" name="target_adr" value="{{order['address']}}">
-		    </div>
-		  </div>
-			<div class="col-md-4 col-md-offset-4">
-			<button class="btn btn-lg btn-primary btn-block" id = “submit” type="submit">发出此单</button>
-		</form>
+		<div class="form-group form-group-lg">
+			    <label class="col-md-2 control-label" for="target_adr">目的地址</label>
+			    <div class="col-md-10">
+			      <input class="form-control" type="text" id="target_adr" name="target_adr" value="{{order['address']}}">
+			    </div>
 		</div>
+			<div class="col-md-4 col-md-offset-4">
+				<button class="btn btn-lg btn-primary btn-block" id = “submit” type="submit">发出此单</button>
+			</div>
+			<div class="clearfix"></div>
+		</form>
+		<br />
 		<br />
 	{% endfor %}
 	{%endif%}
